--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="links">
 			<div class="information">
 				<h3>Information</h3>
-				<div class="button" id="green" onclick="window.open('https://drive.google.com/file/d/1XrNGTc5vq8jsWRG3mQX7PrxouxNr0GyQ/view', '_blank')">Resume</div>
+				<div class="button" id="green" onclick="window.open('https://drive.google.com/file/d/1naHWGMQ89lsYoWqPMIlR9cRaMMBLuu7T/view?usp=sharing', '_blank')">Resume</div>
 				<div class="button" id="purple" onclick="window.open('https://www.linkedin.com/in/zach-burkett/', '_blank')">LinkedIn</div>
 			</div>
 			<div class="projects">
