--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
 				<div class="button" id="purple" onclick="window.open('https://irivium.itch.io/arid-sun', '_blank')">Arid Sun</div>
 				<div class="button" id="green" onclick="window.open('https://irivium.itch.io/ludum-arca', '_blank')">Ludum Arca</div>
 				<h4>Design</h4>
-				<div class="button" id="purple" onclick="window.open('https://www.shadertoy.com/view/lcfSR8', '_blank')">2D Shader</div>
-				<div class="button" id="green" onclick="window.open('https://www.shadertoy.com/view/McXSz8', '_blank')">3D Raymarching Shader</div>
-				<div class="button" id="purple" onclick="window.open('https://drive.google.com/drive/u/1/folders/1zMPVJANYRkFK4t0Z5Feov3nQ125Rc9Y5', '_blank')">20/20 Energy Drink Brand Concept</div>
+				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/breakpet/', '_blank')">Octopus Pet</div>
+				<div class="button" id="green" onclick="window.open('https://www.shadertoy.com/view/lcfSR8', '_blank')">2D Shader</div>
+				<div class="button" id="purple" onclick="window.open('https://www.shadertoy.com/view/McXSz8', '_blank')">3D Raymarching Shader</div>
+				<div class="button" id="green" onclick="window.open('https://drive.google.com/drive/u/1/folders/1zMPVJANYRkFK4t0Z5Feov3nQ125Rc9Y5', '_blank')">20/20 Energy Drink Brand Concept</div>
 			</div>
 			<div class="contact">
 				<h3>Contact</h3>
-				<div class="button" id="green" onclick="window.open('https://github.com/Bottle-Water', '_blank')">Github</div>
-				<div class="button" id="purple" onclick="window.open('mailto:burkettzach04@gmail.com', '_blank')">Email me!</div>
+				<div class="button" id="purple" onclick="window.open('https://github.com/Bottle-Water', '_blank')">Github</div>
+				<div class="button" id="green" onclick="window.open('mailto:burkettzach04@gmail.com', '_blank')">Email me!</div>
 			</div>
 		</div>
 		<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
