--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
 		<div class="links">
 			<div class="information">
 				<h3>Information</h3>
-				<div class="button" id="green" onclick="window.open('ZBurkettResume2024.pdf', '_blank')">Resume</div>
-				<div class="button" id="purple" onclick="window.open('https://www.linkedin.com/in/zach-burkett/', '_blank')">LinkedIn</div>
+				<div class="button" id="purple" onclick="window.open('ZBurkettResume2024.pdf', '_blank')">Resume</div>
+				<div class="button" id="green" onclick="window.open('https://www.linkedin.com/in/zach-burkett/', '_blank')">LinkedIn</div>
 			</div>
 			<div class="projects">
 				<h3>Projects</h3>
 				<h4>Software</h4>
+				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/CrushDriveSite/', '_blank')">Chordle (WIP!)</div>
 				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/BreakPetSite/', '_blank')">Break Pet</div>
 				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/chordle/', '_blank')">Chordle (WIP!)</div>
+
 				<h4>Research</h4>
 				<div class="button" id="green" onclick="window.open('https://drive.google.com/file/d/1XLlDxAA28wmgyTc-LvtFq8zY3mQrdqeZ/view', '_blank')">Analysis of Addictive Design in Software</div>
 				<h4>Games</h4>
