resume link fix

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<div class="links">
 			<div class="information">
 				<h3>Information</h3>
-				<div class="button" id="purple" onclick="window.open('ZBurkettResume2024C.pdf', '_blank')">Resume</div>
+				<div class="button" id="purple" onclick="window.open('ZBurkettResumeC.pdf', '_blank')">Resume</div>
 				<div class="button" id="green" onclick="window.open('https://www.linkedin.com/in/zach-burkett/', '_blank')">LinkedIn</div>
 			</div>
 			<div class="projects">
