--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/BreakPetSite/', '_blank')">Break Pet</div>
 
 				<h4>Research</h4>
-				<div class="button" id="green" onclick="window.open('https://drive.google.com/file/d/1XLlDxAA28wmgyTc-LvtFq8zY3mQrdqeZ/view', '_blank')">Analysis of Addictive Design in Software</div>
+				<div class="button" id="green" onclick="window.open('https://www.paulgazzillo.com/advising/', '_blank')">APPLeSEEd Lab</div>
 				<h4>Games</h4>
 				<div class="button" id="purple" onclick="window.open('https://irivium.itch.io/arid-sun', '_blank')">Arid Sun</div>
 				<div class="button" id="green" onclick="window.open('https://irivium.itch.io/ludum-arca', '_blank')">Ludum Arca</div>
