remove dead links and update title

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				Zachary Burkett   
 			</h1>
 			<h2>
-				Computer Science Student
+				Sound and Music Computer Science Student
 			</h2>
 		</div>
 		<div class="links">
@@ -57,8 +57,6 @@
 				<div class="button" id="green" onclick="window.open('https://irivium.itch.io/ludum-arca', '_blank')">Ludum Arca</div>
 				<h4>Design</h4>
 				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/breakpet/', '_blank')">Octopus Pet</div>
-				<div class="button" id="green" onclick="window.open('https://www.shadertoy.com/view/lcfSR8', '_blank')">2D Shader</div>
-				<div class="button" id="purple" onclick="window.open('https://www.shadertoy.com/view/McXSz8', '_blank')">3D Raymarching Shader</div>
 				<div class="button" id="green" onclick="window.open('https://drive.google.com/drive/u/1/folders/1zMPVJANYRkFK4t0Z5Feov3nQ125Rc9Y5', '_blank')">20/20 Energy Drink Brand Concept</div>
 			</div>
 			<div class="contact">
