--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				Zachary Burkett   
 			</h1>
 			<h2>
-				Sound and Music Computer Science Student
+				MSc Sound & Music Computing
 			</h2>
 		</div>
 		<div class="links">
