--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<h3>Projects</h3>
 				<h4>Software</h4>
 				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/CrushDriveSite/', '_blank')">CrushDrive Audio Plugin</div>
-				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/chordle/', '_blank')">Chordle (WIP!)</div>
+				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/chordle/', '_blank')">Chordle</div>
 				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/BreakPetSite/', '_blank')">Break Pet</div>
 
 				<h4>Research</h4>
