Rearrange project and research buttons in index.html

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
 				<h3>Projects</h3>
 				<h4>Software</h4>
 				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/CrushDriveSite/', '_blank')">CrushDrive Audio Plugin</div>
-				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/chordle/', '_blank')">Chordle</div>
-				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/BreakPetSite/', '_blank')">Break Pet</div>
-
-				<h4>Research</h4>
-				<div class="button" id="green" onclick="window.open('https://www.paulgazzillo.com/advising/', '_blank')">APPLeSEEd Lab</div>
+				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/BreakPetSite/', '_blank')">Break Pet</div>
 				<h4>Games</h4>
 				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/NeonGarden/', '_blank')">Neon Garden</div>
+				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/chordle/', '_blank')">Chordle</div>
 				<div class="button" id="green" onclick="window.open('https://irivium.itch.io/arid-sun', '_blank')">Arid Sun</div>
 				<div class="button" id="purple" onclick="window.open('https://irivium.itch.io/ludum-arca', '_blank')">Ludum Arca</div>
+				<h4>Research</h4>
+				<div class="button" id="green" onclick="window.open('https://www.paulgazzillo.com/advising/', '_blank')">APPLeSEEd Lab</div>
+
 				<h4>Design</h4>
 				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/breakpet/', '_blank')">Octopus Pet</div>
 				<div class="button" id="purple" onclick="window.open('https://drive.google.com/drive/u/1/folders/1zMPVJANYRkFK4t0Z5Feov3nQ125Rc9Y5', '_blank')">20/20 Energy Drink Brand Concept</div>
