Update project links in index.html

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
 				<h3>Projects</h3>
 				<h4>Software</h4>
 				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/CrushDriveSite/', '_blank')">CrushDrive Audio Plugin</div>
+				<div class="button" id="purple" onclick="window.open('https://github.com/Bottle-Water/Blastov/tree/main', '_blank')">Blastov! Generative System</div>
 				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/BreakPetSite/', '_blank')">Break Pet</div>
 				<h4>Games</h4>
 				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/NeonGarden/', '_blank')">Neon Garden</div>
-				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/chordle/', '_blank')">Chordle</div>
 				<div class="button" id="purple" onclick="window.open('https://youtu.be/GR8XCO-6Oco', '_blank')">Arpium Demo Video (WIP!)</div>
+				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/chordle/', '_blank')">Chordle</div>
 				<div class="button" id="green" onclick="window.open('https://irivium.itch.io/arid-sun', '_blank')">Arid Sun</div>
 				<div class="button" id="purple" onclick="window.open('https://irivium.itch.io/ludum-arca', '_blank')">Ludum Arca</div>
 				<h4>Research</h4>
