--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/BreakPetSite/', '_blank')">Break Pet</div>
 				<h4>Games</h4>
 				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/NeonGarden/', '_blank')">Neon Garden</div>
-				<div class="button" id="purple" onclick="window.open('https://youtu.be/GR8XCO-6Oco', '_blank')">Arpium Demo Video (WIP!)</div>
-				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/chordle/', '_blank')">Chordle</div>
+				<div class="button" id="green" onclick="window.open('https://youtu.be/GR8XCO-6Oco', '_blank')">Arpium Demo Video (WIP!)</div>
+				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/chordle/', '_blank')">Chordle</div>
 				<div class="button" id="green" onclick="window.open('https://irivium.itch.io/arid-sun', '_blank')">Arid Sun</div>
 				<div class="button" id="purple" onclick="window.open('https://irivium.itch.io/ludum-arca', '_blank')">Ludum Arca</div>
 				<h4>Research</h4>
