--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 		<div class="links">
 			<div class="information">
 				<h3>Information</h3>
-				<div class="button" id="purple" onclick="window.open('ZBurkettResume.pdf', '_blank')">Resume</div>
-				<div class="button" id="green" onclick="window.open('https://www.linkedin.com/in/zach-burkett/', '_blank')">LinkedIn</div>
+				<div class="button" id="green" onclick="window.open('ZBurkettResume.pdf', '_blank')">Resume</div>
+				<div class="button" id="purple" onclick="window.open('https://www.linkedin.com/in/zach-burkett/', '_blank')">LinkedIn</div>
 			</div>
 			<div class="projects">
 				<h3>Projects</h3>
 				<h4>Software</h4>
-				<div class="button" id="purple" onclick="window.open('https://bottle-water.github.io/CrushDriveSite/', '_blank')">CrushDrive Audio Plugin</div>
+				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/CrushDriveSite/', '_blank')">CrushDrive Audio Plugin</div>
 				<div class="button" id="purple" onclick="window.open('https://github.com/Bottle-Water/Blastov/tree/main', '_blank')">Blastov! Generative System</div>
 				<div class="button" id="green" onclick="window.open('https://bottle-water.github.io/BreakPetSite/', '_blank')">Break Pet</div>
 				<h4>Games</h4>
